图片管理页面开始

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="feedback_tip_send_report">Yes, Report!</string>
     <string name="feedback_tip_no">No</string>
 
+    <string name="image_title">Image</string>
+
 </resources>
