--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,4 +183,18 @@
     <string name="size">Size</string>
     <string name="file_open_as">Open as</string>
 
+    <!--评分引导-->
+    <string name="googleplay_dialog_love_titel">Love Ace Network</string>
+    <string name="googleplay_dialog_cheers_title">Cheers!</string>
+    <string name="googleplay_dialog_feedback_title">Feedback</string>
+    <string name="googleplay_dialog_feedback_tipword1">Would you mind giving us feedback?</string>
+    <string name="googleplay_dialog_feedback_tipword2">Your every word is valuable to us.</string>
+    <string name="googleplay_dialog_cheer_tipword">How\'s Ace Network for you?</string>
+    <string name="googleplay_dialog_love_tipword">How about a rating on Play Store, then?</string>
+
+    <string name="googleplay_dialog_thanks_btn">NO, THANKS</string>
+    <string name="googleplay_dialog_great_btn">NOT GREAT</string>
+    <string name="googleplay_dialog_sure_btn">OK, SURE</string>
+    <string name="googleplay_dialog_love_btn">I LOVE IT!</string>
+
 </resources>
