--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,8 @@
     <string name="path">Path</string>
     <string name="size">Size</string>
     <string name="file_open_as">Open as</string>
+    <string name="user_app">UserApp</string>
+    <string name="system_app">SystemApp</string>
 
     <!--评分引导-->
     <string name="googleplay_dialog_love_titel">Love Ace Network</string>
