--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="common_cancel">Cancel</string>
     <string name="common_sure">Sure</string>
     <string name="common_ok">OK</string>
+    <string name="common_stop">Stop</string>
 
 
     <string name="gp_not_connect">Unable to open connection</string>
@@ -203,4 +204,32 @@
     <string name="update_later">Later</string>
     <!-- 更新 -->
     <string name="update_cancel">Cancel</string>
+
+    <!--权限警报-->
+    <string name="permission_setting_title">Permission Alarm</string>
+    <string name="permission_name_write_contacts">recompose contacts</string>
+    <string name="permission_name_call_phone">make call</string>
+    <string name="permission_name_outgoing_call">reset call</string>
+    <string name="permission_name_write_call_log">modify call log</string>
+    <string name="permission_name_send_sms">send SMS</string>
+    <string name="permission_name_camera">camera</string>
+    <string name="permission_name_location">location</string>
+    <string name="permission_name_read_sms">read SMS</string>
+    <string name="permission_name_receive_sms">receive SMS</string>
+    <string name="permission_name_read_contacts">read contacts</string>
+    <string name="permission_name_read_call_log">read call log</string>
+    <string name="permission_name_get_account">get devices account</string>
+    <string name="permission_name_internet">networking</string>
+    <string name="permission_alarm_dialog_title_lv1_lv2">will use %1$s %2$d permission(s)</string>
+    <string name="permission_alarm_dialog_title_lv3">will use %s permission(s)</string>
+    <string name="permission_alarm_dialog_content_lv1">might cost some related fees, still continue?</string>
+    <string name="permission_alarm_dialog_content_lv2">involving your personal information, still continue?</string>
+    <string name="permission_alarm_dialog_content_lv3">may network communications, still continue?</string>
+    <string name="no_new_permissions_line1">%d apps updated</string>
+    <string name="no_new_permissions_line2">%s detected no new alarm permission(s) wanted</string>
+    <string name="request_app_permission_content">%s can check if certain sensitive permission(s) will used by any apps!</string>
+    <string name="permission_dialog_dital_txt_tip">Details >> </string>
+
+    <!-- 广告-->
+    <string name="ad_install_now">Install Now</string>
 </resources>
