action bar更多弹出框

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,6 +263,12 @@
     <string name="more">More</string>
     <string name="clean_storage">Clean Storage</string>
 
+
+    <!-- pop up window -->
+    <string name="popup_more_new_folder">New Folder</string>
+    <string name="popup_more_sort_by">Sort by</string>
+
+
     <!-- dialog -->
     <string name="dialog_create_new_folder_title">Create a folder</string>
     <string name="dialog_create_new_folder_hint">Type a new name</string>
