--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,5 +275,7 @@
     <string name="dialog_create_new_folder_error_input">The file name could not contain the char</string>
     <string name="dialog_create_new_folder_empty_input">File name could not be empty</string>
 
+    <string name="dialog_sort_by_title">Sort by</string>
+
 
 </resources>
