--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -313,6 +313,7 @@
     <string name="dialog_delete_confirm_title">Confirm Deletion</string>
     <string name="dialog_delete_confirm_danger_tips">This behavior may cause a system or application crash!</string>
     <string name="dialog_delete_confirm_desc">Are you sure to delete the selected item(s)?</string>
+    <string name="home_trash_notice">%1$s可清理</string>
 
     <!-- Toast -->
     <string name="toast_create_folder_failed">Create folder failed</string>
