--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="common_ok">OK</string>
     <string name="common_stop">Stop</string>
     <string name="common_continue">Continue</string>
+    <string name="common_skip">Skip</string>
 
 
     <string name="gp_not_connect">Unable to open connection</string>
@@ -315,10 +316,12 @@
     <string name="dialog_delete_confirm_desc">Are you sure to delete the selected item(s)?</string>
     <string name="home_trash_notice">%1$s可清理</string>
 
-    <string name="dialog_duplicate_file_title">File Duplicated</string>
-    <string name="dialog_duplicate_file_desc">The same filename already exists, Do you want to overwrite?</string>
-    <string name="dialog_duplicate_file_apply_to_all">Apply to all</string>
+    <string name="dialog_duplicate_file_paste_title">File Duplicated</string>
+    <string name="dialog_duplicate_file_paste_desc">The same filename already exists, Do you want to overwrite?</string>
+    <string name="dialog_duplicate_file_paste_apply_to_all">Apply to all</string>
 
+    <string name="dialog_sub_folder_paste_title">Subfolder Paste</string>
+    <string name="dialog_sub_folder_paste_desc">Destination folder is a subfolder of the source folder</string>
 
     <!-- Toast -->
     <string name="toast_create_folder_failed">Create folder failed</string>
