标题栏点击效果

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="clean_storage">Clean Storage</string>
     <string name="see"><![CDATA[See>>]]></string>
+    <string name="zip">Zip</string>
 </resources>
