--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -364,4 +364,5 @@
     <string name="extract_to">Extract to: %1$s</string>
     <string name="extract_error">Extract Error.</string>
     <string name="extract_cancel">Extract Canceled.</string>
+    <string name="home_button_clean">Clean</string>
 </resources>
