--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="common_continue">Continue</string>
     <string name="common_skip">Skip</string>
     <string name="common_paste">Paste</string>
-
+    <string name="common_retry">Retry</string>
 
     <string name="gp_not_connect">Unable to open connection</string>
 
