--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,4 +365,5 @@
     <string name="extract_error">Extract Error.</string>
     <string name="extract_cancel">Extract Canceled.</string>
     <string name="home_button_clean">Clean</string>
+    <string name="doc_manager_title_select_mode">%1$d file(s) selected</string>
 </resources>
