--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,4 +368,5 @@
     <string name="home_button_clean">Clean</string>
     <string name="doc_manager_title_select_mode">%1$d file(s) selected</string>
     <string name="item_count">(%1$d)</string>
+    <string name="no_file_hint">没有文件</string>
 </resources>
