--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="common_skip">Skip</string>
     <string name="common_paste">Paste</string>
     <string name="common_retry">Retry</string>
+    <string name="common_search">Search</string>
 
     <string name="gp_not_connect">Unable to open connection</string>
 
