--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,6 +341,8 @@
     <string name="toast_logger_notification_switch_enable">Logger notification enable</string>
     <string name="toast_logger_notification_switch_disable">Logger notification disable</string>
     <string name="toast_paste_dest_disable">Can not paste here</string>
+    <string name="toast_search_input_empty">Please input something to search</string>
+
 
 
     <string name="see"><u><![CDATA[See>>]]></u></string>
